scss/components/_lists.scss
.well-list {
	margin: 0;
	padding: 0;
	list-style: none;
	> li {
		font-family: $header-font-family;
		font-size: 0.875rem;
		font-weight: 400;
		min-height: 20px;
		border-bottom: 1px solid rgba($black, $B-dividers);
		position: relative;
		a {
			color: $text-black;
			font-weight: 400;
			&:hover {
				text-decoration: underline;
			}
		}
		.list-wrap {
			background-color: $white;
			padding: 15px 25px;
		}
		.list-panel {
			background-color: rgba($dark-gray, $B-dividers);
			display: none;
			.form-single-line {
				padding: 15px 30px 15px;
			}
		}
		.list-item-image {
			width: 7%;
			float: left;
			position: relative;
		}
		.list-item-name {
			width: 30%;
			position: relative;
			float: left;
		}
		.list-detail {
			max-width: 45%;
			display: inline-block;
			color: rgba($black, $B-subtext);
			[type='text'],
			[type='password'],
			[type='date'],
			[type='datetime'],
			[type='datetime-local'],
			[type='month'],
			[type='week'],
			[type='email'],
			[type='number'],
			[type='search'],
			[type='tel'],
			[type='time'],
			[type='url'],
			[type='color'] {
				margin-bottom: 0;
			}
		}
		.list-note {
			display: inline-block;
			width: 20%;
		}
		&:last-child {
			border-bottom: none;
		}
		&:after {
			content: " ";
    		display: table;
    		clear: both;
		}
	}
	// Wells listed under the main list
	.well-list {
		> li {
			font-size: 0.75rem;
			border-bottom: 1px solid rgba($white, $W-hinttext);
			.list-wrap {
				padding-left: 60px;
				background: transparent;
			}
			&.list-core {
				.list-wrap {
					background-color: rgba($primary-color, $B-dividers);
				}
			}
			.list-item-name {
				label {
					font-size: 0.75rem;
				}
			}
			&:last-child {
				border-bottom: none;
			}
		}
	}
	// Small version of the default well list
	&.small {
		.h6 {
			font-size: 0.875rem;
		}
		[type='radio'],
		[type='checkbox'] {
			margin-bottom: 0;
		}
		> li {
			.list-wrap {
				padding: 7px 15px;
			}
			.list-item-name {
				width: 60%;
				position: relative;
				float: left;
			}
			.list-detail {
				max-width: 30%;
				display: inline-block;
			}
		}
		// Wells listed under the main small list
		.well-list {
			.action-link {
				line-height: 1.5rem;
			}
			.list-wrap {
				padding-left: 30px;
			}
			// Third tier of wells
			.well-list {
				font-size: 0.75rem;
				.action-link {
					line-height: 1.5rem;
				}
				.list-wrap {
					padding-left: 60px;
					label {
						font-size: 0.75rem;
					}
				}
			}
		}
	}
	&.with-inputs {
		.h6 {
			margin-top: 0.5rem;
		}
		.action-link {
			line-height: 2.5rem;
		}
	}
}

